<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:title="@string/drawer_settings">
            <menu>
                <item
                    android:id="@+id/retention"
                    android:icon="@drawable/ic_access_time_black_24dp"
                    android:title="@string/drawer_set_retention" />
                <item
                    android:id="@+id/vibration"
                    android:icon="@drawable/ic_vibration_black_24dp"
                    android:title="@string/drawer_set_vibration"
                    app:actionLayout="@layout/toggle_button" />
            </menu>
        </item>
        <item android:title="@string/drawer_data">
            <menu>
                <item
                    android:id="@+id/set_all_read"
                    android:icon="@drawable/ic_done_all_black_24dp"
                    android:title="@string/drawer_set_all_read" />
                <item
                    android:id="@+id/delete_all"
                    android:icon="@drawable/ic_delete_forever_black_24dp"
                    android:title="@string/drawer_delete_all" />
            </menu>
        </item>
        <item android:title="@string/drawer_other">
            <menu>
                <item
                    android:id="@+id/about"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/drawer_about" />
            </menu>
        </item>
    </group>
</menu>